# Raytracer-cpp

./: .gitignore  CMakeLists.txt  README.md
config/: libloader.cfg
include/: AMaterial.hpp  APrimitive.hpp  ATexture.hpp  ILight.hpp  IMaterial.hpp  IPDF.hpp  IPrimitive.hpp  IRenderer.hpp  ITexture.hpp
plugins/material/: CMakeLists.txt
plugins/material/dielectric/: CMakeLists.txt
plugins/material/dielectric/src/: Dielectric.cpp  Dielectric.hpp
plugins/material/diffuseLight/: CMakeLists.txt
plugins/material/diffuseLight/src/: diffuseLight.cpp  diffuseLight.hpp
plugins/material/metal/: CMakeLists.txt
plugins/material/metal/src/: Metal.cpp  Metal.hpp
plugins/primitive/: CMakeLists.txt
plugins/primitive/bvh/: CMakeLists.txt
plugins/primitive/bvh/src/: BVH.cpp  BVH.hpp
plugins/primitive/cone/: CMakeLists.txt
plugins/primitive/cone/src/: Cone.cpp  Cone.hpp
plugins/primitive/cube/: CMakeLists.txt
plugins/primitive/cube/src/: Cube.cpp  Cube.hpp  Rectangle.cpp  Rectangle.hpp
plugins/primitive/cylinder/: CMakeLists.txt
plugins/primitive/cylinder/src/: Cylinder.cpp  Cylinder.hpp
plugins/primitive/limitedCone/: CMakeLists.txt
plugins/primitive/limitedCone/src/: LimitedCone.cpp  LimitedCone.hpp
plugins/primitive/limitedCylinder/: CMakeLists.txt
plugins/primitive/limitedCylinder/src/: LimitedCylinder.cpp  LimitedCylinder.hpp
plugins/primitive/movingSphere/: CMakeLists.txt
plugins/primitive/movingSphere/src/: MovingSphere.cpp  MovingSphere.hpp
plugins/primitive/planes/: CMakeLists.txt
plugins/primitive/planes/src/: Planes.cpp  Planes.hpp
plugins/primitive/sphere/: CMakeLists.txt
plugins/primitive/sphere/src/: Sphere.cpp  Sphere.hpp
plugins/primitive/triangle/: CMakeLists.txt
plugins/primitive/triangle/src/: Triangle.cpp  Triangle.hpp
plugins/renderer/: CMakeLists.txt
plugins/renderer/dependencies/: CMakeLists.txt
plugins/renderer/src/: Renderer.cpp  Renderer.hpp  RendererPreview.cpp  RendererPreview.hpp
plugins/texture/: CMakeLists.txt
plugins/texture/blendedTexture/: CMakeLists.txt
plugins/texture/blendedTexture/src/: BlendedTexture.cpp  BlendedTexture.hpp
plugins/texture/chessTexture/: CMakeLists.txt
plugins/texture/chessTexture/src/: chessTexture.cpp  chessTexture.hpp
plugins/texture/gradientTexture/: CMakeLists.txt
plugins/texture/gradientTexture/src/: GradientColor.cpp  GradientColor.hpp
plugins/texture/imageTexture/: CMakeLists.txt
plugins/texture/imageTexture/src/: imageTexture.cpp  imageTexture.hpp
plugins/texture/noiseTexture/: CMakeLists.txt
plugins/texture/noiseTexture/src/: noiseTexture.cpp  noiseTexture.hpp
plugins/texture/ringTexture/: CMakeLists.txt
plugins/texture/ringTexture/src/: RingTexture.cpp  RingTexture.hpp
plugins/texture/stripTexture/: CMakeLists.txt
plugins/texture/stripTexture/src/: StripTexture.cpp  StripTexture.hpp
scenes/: config.cfg  cornellBox.cfg  perlinNoise.cfg  simpleLight.cfg  sphereScene.cfg  twoSphere.cfg
src/: Main.cpp
src/Parser/: Parser.cpp  Parser.hpp
tools/: AABB.hpp  Camera.hpp  CosinePDF.hpp  HitRecord.hpp  Lambertian.hpp  LibLoader.hpp  Matrix.hpp  MixturePDF.hpp  ONB.hpp  PerlinNoise.hpp  PrimitiveList.hpp  PrimitivePDF.hpp  Quaternion.hpp  Ray.hpp  ScatterRecord.hpp  Scene.hpp  SolidColor.hpp  Tools.hpp  Transform.hpp  Triangle.hpp  Vector3D.hpp
